# nstoolkit

./: .gitignore  Cargo.toml
src/: aes.rs  bktr.rs  hash.rs  ivfc.rs  keys.rs  main.rs  nca.rs  pfs0.rs  read.rs  romfs.rs  util.rs
